--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -1,12 +1,7 @@
 {
-    "type": "mysql",
-    "host": "localhost",
-    "port": 3306,
-    "username": "root",
-    "password": "",
-    "database": "db_happy",
-    "synchronize": true,
-    "logging": false,
+    "type":"sqlite",
+    "database":"./src/database/database.sqlite",
+
     "migrations": [
        "src/database/migrations/*.ts"
     ],
