--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "sqlite3": "^5.0.0",
     "ts-node-dev": "^1.0.0",
     "typeorm": "^0.2.28",
     "yup": "^0.29.3"
