--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.17",
     "sqlite3": "^5.0.0",
     "ts-node-dev": "^1.0.0",
     "typeorm": "^0.2.28",
