--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.17",
+    "nodemailer-express-handlebars": "^4.0.0",
     "sqlite3": "^5.0.0",
     "ts-node-dev": "^1.0.0",
     "typeorm": "^0.2.28",
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
+    "@types/nodemailer": "^6.4.0",
     "@types/yup": "^0.29.8",
     "typescript": "^4.0.3"
   }
